Moved JSON & fix navbar on mobile

--- a/css/ak.css
+++ b/css/ak.css
@@ -31,6 +31,14 @@ body>nav {
     padding-bottom: 0px!important;
     padding-top: 0px!important;
 }
+@media screen and (max-width:768px) {
+    body>nav {
+        min-height: 60px;
+        height: auto;
+        padding-bottom: auto!important;
+        padding-top: auto!important;
+    }
+}
 body>nav .navbar-nav, #navbarNav {
     height: 100%;
 }
